erDiagram
    ESPECIALIDADE ||--|{ MEDICO : possui
    MEDICO ||--o{ AGENDAMENTO : realiza
    PACIENTE ||--o{ AGENDAMENTO : marca
    AGENDAMENTO ||--|| ATENDIMENTO : gera
    ATENDIMENTO ||--|| PRONTUARIO : registra
    PRONTUARIO ||--o{ EXAME : inclui
    PRONTUARIO ||--o{ MEDICAMENTO : prescreve

    ESPECIALIDADE {
        int id_especialidade PK
        string nome
        string descricao
        decimal valor_consulta
    }

    MEDICO {
        int id_medico PK
        int id_especialidade FK
        string nome
        string crm
        string telefone
        string email
        string dias_atendimento
        time horario_inicio
        time horario_fim
    }

    PACIENTE {
        int id_paciente PK
        string nome
        string cpf
        string telefone
        string email
        string endereco
        date data_nascimento
        string plano_saude
        string grupo_sanguineo
        text alergias
    }

    AGENDAMENTO {
        int id_agendamento PK
        int id_medico FK
        int id_paciente FK
        datetime data_hora
        string status
        string forma_pagamento
        decimal valor
    }

    ATENDIMENTO {
        int id_atendimento PK
        int id_agendamento FK
        datetime data_inicio
        datetime data_fim
        string status
        text observacoes
    }

    PRONTUARIO {
        int id_prontuario PK
        int id_paciente FK
        int id_atendimento FK
        datetime data_registro
        text queixa_principal
        text diagnostico
        text prescricao
        text observacoes
    }

    EXAME {
        int id_exame PK
        int id_prontuario FK
        string tipo_exame
        date data_solicitacao
        date data_realizacao
        text resultado
        blob anexo
    }

    MEDICAMENTO {
        int id_medicamento PK
        int id_prontuario FK
        string nome
        string dosagem
        string frequencia
        string duracao
        text observacoes
    }